--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.40.1",
+    "@playwright/test": "^1.41.1",
     "@types/node": "^20.11.0",
+    "allure-playwright": "^2.11.1",
     "playwright-core": "^1.40.1"
   }
 }
